# ent/openapi.json
@@ -6,6 +6,34 @@
     "version": "1.0.0"
   },
   "paths": {
+    "/health": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "409": {
+            "$ref": "#/components/responses/409"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/banks": {
       "get": {
         "tags": [
@@ -1619,7 +1647,7 @@
   },
   "servers": [
     {
-      "url": "http://127.0.0.1:3001/api/v1",
+      "url": "http://127.0.0.1:8080/api/v1",
       "description": "Локальный сервер (по умолчанию)"
     }
   ]
